# axum-starter

./: Application.yaml  Cargo.toml  README.md  check_error.txt
src/: api.rs  app.rs  config.rs  database.rs  main.rs
src/api/: user.rs
src/app/: common.rs  config.rs  database.rs  error.rs  id.rs  json.rs  latency.rs  logger.rs  path.rs  query.rs  server.rs  valid.rs
src/app/config/: database.rs
src/config/: jwt.rs  mod.rs
src/core/: auth.rs  common.rs  enumeration.rs  error.rs  logger.rs  middleware.rs  mod.rs  response.rs  runtime.rs  serde.rs  state.rs  utils.rs  validation.rs
src/core/extract/: json.rs  path.rs  query.rs  valid.rs
src/entity/: sys_user.rs
src/infra/: database.rs  latency.rs  mod.rs  server.rs
src/modules/: mod.rs
src/modules/auth/: dto.rs  handler.rs  repo.rs  service.rs
src/modules/user/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
