[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
] }
num_cpus = "1.17.0"
